# fivetran-custom-connector

./: README.md
connectors/countryinfo/: connector.py  dev.requirements.txt
connectors/everyaction/: connector.py  everyaction_api.py
connectors/sa360_custom_keywords/: connector.py  pyproject.toml
connectors/weather/: connector.py  pyproject.toml
everyaction/: everyaction_api.py  state_codes.py
lib/shared/: pyproject.toml
lib/shared/src/shared/api/: client.py
sa360-custom-keywords/: connector.py  search_ads_360.py
shared/: README.md  pyproject.toml  requirements.txt
shared/src/shared/: logging.py
shared/src/shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shared/src/shared/api/: auth_strategy.py  client.py  codecs.py  endpoint.py
temp/shared/: api.py  auth_strategy.py  endpoint.py  weather_example.py
temp/weather/: connector.py
