[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for connector creation"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "marshmallow>=3.20",
    "lxml>=4.9",
]


[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["shared*"]
